Add SCM information to the pom.xml file
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -112,4 +112,11 @@ Therefore, Fiji introduced the split between plugins/ and jars/, where third-par
 		</repository>
 	</repositories>
 
+	<scm>
+		<connection>scm:git:git://github.com/imagej/imagej-maven-plugin</connection>
+		<developerConnection>scm:git:git@github.com:imagej/imagej-maven-plugin</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/imagej/imagej-maven-plugin</url>
+	</scm>
+
 </project>
