--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.1</version>
+			</plugin>
 		</plugins>
 	</build>
 
