Modify pom.xml to be able to deploy to ImageJ's Maven repository
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,22 @@
 		</repository>
 	</repositories>
 
+
+	<!-- The following configuration allows authorized developers
+	     to deploy artifacts to the ImageJ Maven repository. -->
+	<distributionManagement>
+		<repository>
+			<id>imagej.releases</id>
+			<name>ImageJ Releases Repository</name>
+			<url>dav:http://maven.imagej.net/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>imagej.snapshots</id>
+			<name>ImageJ Snapshots Repository</name>
+			<url>dav:http://maven.imagej.net/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<scm>
 		<connection>scm:git:git://github.com/imagej/imagej-maven-plugin</connection>
 		<developerConnection>scm:git:git@github.com:imagej/imagej-maven-plugin</developerConnection>
