--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,16 @@
 				<version>2.4.1</version>
 			</plugin>
 		</plugins>
+
+		<!-- We use wagon-webdav-jackrabbit 1.0 for deploys, since it is
+		     compatible with both Maven 2.2.x and Maven 3.0.x cross-platform. -->
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav-jackrabbit</artifactId>
+				<version>1.0</version>
+			</extension>
+		</extensions>
 	</build>
 
 	<dependencies>
