Avoid the pesky encoding warning
... as per https://maven.apache.org/general.html#encoding-warning

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/src/it/copy-jars/pom.xml
+++ b/src/it/copy-jars/pom.xml
@@ -31,6 +31,7 @@
 
   <properties>
     <imagej.app.directory>${project.basedir}/target/ImageJ.app/</imagej.app.directory>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
