--- a/src/it/missing-property/pom.xml
+++ b/src/it/missing-property/pom.xml
@@ -10,6 +10,10 @@
   <packaging>jar</packaging>
   <name>An example ImageJ 1.x plugin to test imagej-maven-plugin's CopyJarsMojo</name>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>gov.nih.imagej</groupId>
