--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.imagej</groupId>
 	<artifactId>imagej-maven-plugin</artifactId>
-	<version>0.3.1-SNAPSHOT</version>
+	<version>0.3.1</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>ImageJ Maven plugin</name>
@@ -143,7 +143,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/imagej/imagej-maven-plugin</connection>
 		<developerConnection>scm:git:git@github.com:imagej/imagej-maven-plugin</developerConnection>
-		<tag>HEAD</tag>
+		<tag>imagej-maven-plugin-0.3.1</tag>
 		<url>https://github.com/imagej/imagej-maven-plugin</url>
 	</scm>
 
