--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,15 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.4.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<configuration>
+					<licenseName>bsd_2</licenseName>
+					<organizationName>Board of Regents of the University of
+Wisconsin-Madison.</organizationName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
