--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.scijava</groupId>
-		<artifactId>pom-scijava</artifactId>
-		<version>1.155</version>
+		<groupId>net.imagej</groupId>
+		<artifactId>pom-imagej</artifactId>
+		<version>2.6</version>
 	</parent>
 
 	<groupId>net.imagej</groupId>
@@ -19,7 +19,6 @@
 
 	<properties>
 		<maven.version>2.0</maven.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<prerequisites>
@@ -27,8 +26,6 @@
 	</prerequisites>
 
 	<build>
-		<!-- It is nice for "mvn" with no arguments to do something reasonable. -->
-		<defaultGoal>install</defaultGoal>
 		<plugins>
 			<plugin>
 				<artifactId>maven-invoker-plugin</artifactId>
@@ -66,15 +63,6 @@
 			<plugin>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.4.1</version>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>license-maven-plugin</artifactId>
-				<configuration>
-					<licenseName>bsd_2</licenseName>
-					<organizationName>Board of Regents of the University of
-Wisconsin-Madison.</organizationName>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
