--- a/src/it/exclusions/pom.xml
+++ b/src/it/exclusions/pom.xml
@@ -28,25 +28,23 @@
   POSSIBILITY OF SUCH DAMAGE.
   #L%
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.maven.plugin.my.unit</groupId>
-  <artifactId>exclusions</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>Top-level project for testing exclusions</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<groupId>org.apache.maven.plugin.my.unit</groupId>
+	<artifactId>exclusions</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>Top-level project for testing exclusions</name>
 
-  <modules>
-    <module>excluded</module>
-    <module>dependency</module>
-    <module>to-copy</module>
-  </modules>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<modules>
+		<module>excluded</module>
+		<module>dependency</module>
+		<module>to-copy</module>
+	</modules>
 </project>
