--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
 		<url>https://github.com/imagej/imagej-maven-plugin</url>
 	</scm>
 
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/imagej/imagej-maven-plugin/issues</url>
+	</issueManagement>
+
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://jenkins.imagej.net/job/ImageJ-Maven-plugin/</url>
+	</ciManagement>
+
 	<properties>
 		<maven.version>2.0</maven.version>
 	</properties>
