--- a/src/it/copy-jars/pom.xml
+++ b/src/it/copy-jars/pom.xml
@@ -71,6 +71,17 @@
 							<goal>copy-jars</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>install-artifact</id>
+						<phase>install</phase>
+						<goals>
+							<goal>install-artifact</goal>
+						</goals>
+						<configuration>
+							<imagejDirectoryProperty>${project.basedir}/target/Other.app/</imagejDirectoryProperty>
+							<artifact>${project.groupId}:${project.artifactId}:${project.version}</artifact>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
