POM: fix parent relative path
The parent POM does _not_ reside in the parent directory!

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>net.imagej</groupId>
 		<artifactId>pom-imagej</artifactId>
 		<version>2.7</version>
+		<relativePath />
 	</parent>
 
 	<artifactId>imagej-maven-plugin</artifactId>
