--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 Wisconsin-Madison, Broad Institute of MIT and Harvard, and Max Planck
 Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 		<license.projectName>ImageJ software for multidimensional image processing and analysis.</license.projectName>
+		<scijava.jvm.version>1.6</scijava.jvm.version>
 		<maven.version>2.0</maven.version>
 	</properties>
 
