--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
 		<url>https://github.com/imagej/imagej-maven-plugin/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/job/ImageJ-Maven-plugin/</url>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/imagej/imagej-maven-plugin</url>
 	</ciManagement>
 
 	<properties>
