--- a/src/it/install-from-local-repo/to-copy/pom.xml
+++ b/src/it/install-from-local-repo/to-copy/pom.xml
@@ -28,57 +28,56 @@
   POSSIBILITY OF SUCH DAMAGE.
   #L%
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.maven.plugin.my.unit</groupId>
-  <artifactId>to-copy</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>An example artifact to test support for local repositories</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <properties>
-    <imagej.app.directory>${project.basedir}/../target/ImageJ.app/</imagej.app.directory>
-  </properties>
+	<groupId>org.apache.maven.plugin.my.unit</groupId>
+	<artifactId>to-copy</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>An example artifact to test support for local repositories</name>
 
-  <dependencies>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>only-local</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
+	<properties>
+		<imagej.app.directory>${project.basedir}/../target/ImageJ.app/</imagej.app.directory>
+	</properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>net.imagej</groupId>
-        <artifactId>imagej-maven-plugin</artifactId>
-	<version>${imagej-maven.version}</version>
-        <executions>
-          <execution>
-            <id>copy-jars</id>
-            <phase>install</phase>
-            <goals>
-              <goal>copy-jars</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>install-artifact</id>
-            <phase>install</phase>
-            <goals>
-              <goal>install-artifact</goal>
-            </goals>
-            <configuration>
-              <imagejDirectory>${project.basedir}/../target/Other.app/</imagejDirectory>
-              <artifact>${project.groupId}:${project.artifactId}:${project.version}</artifact>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>only-local</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>net.imagej</groupId>
+				<artifactId>imagej-maven-plugin</artifactId>
+				<version>${imagej-maven.version}</version>
+				<executions>
+					<execution>
+						<id>copy-jars</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-jars</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>install-artifact</id>
+						<phase>install</phase>
+						<goals>
+							<goal>install-artifact</goal>
+						</goals>
+						<configuration>
+							<imagejDirectory>${project.basedir}/../target/Other.app/</imagejDirectory>
+							<artifact>${project.groupId}:${project.artifactId}:${project.version}</artifact>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
