Make -Ddelete.other.versions=true the default
Closes #12.

--- a/src/it/delete-other-versions/pom.xml
+++ b/src/it/delete-other-versions/pom.xml
@@ -50,7 +50,7 @@
 				<artifactId>imagej-maven-plugin</artifactId>
 				<version>${imagej-maven.version}</version>
 				<configuration>
-					<deleteOtherVersions>true</deleteOtherVersions>
+					<deleteOtherVersions>false</deleteOtherVersions>
 				</configuration>
 				<executions>
 					<execution>
