--- a/src/it/delete-other-versions-policy/pom.xml
+++ b/src/it/delete-other-versions-policy/pom.xml
@@ -36,11 +36,12 @@
 	<artifactId>Example_PlugIn</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>An example ImageJ 1.x plugin to test if LWJGL natives-* files are kept</name>
+	<name>An example ImageJ 1.x plugin to test imagej-maven-plugin's CopyJarsMojo</name>
 
 	<properties>
 		<imagej.app.directory>${project.basedir}/target/ImageJ.app/</imagej.app.directory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<imagej.deleteOtherVersions>always</imagej.deleteOtherVersions>
 	</properties>
 
 	<build>
@@ -49,9 +50,6 @@
 				<groupId>net.imagej</groupId>
 				<artifactId>imagej-maven-plugin</artifactId>
 				<version>${imagej-maven.version}</version>
-				<configuration>
-					<deleteOtherVersionsPolicy>always</deleteOtherVersionsPolicy>
-				</configuration>
 				<executions>
 					<execution>
 						<id>copy-jars</id>
@@ -59,6 +57,18 @@
 						<goals>
 							<goal>copy-jars</goal>
 						</goals>
+					</execution>
+					<execution>
+						<id>install-artifact</id>
+						<phase>install</phase>
+						<goals>
+							<goal>install-artifact</goal>
+						</goals>
+						<configuration>
+							<imagejDirectory>${project.basedir}/target/Other.app/</imagejDirectory>
+							<artifact>${project.groupId}:${project.artifactId}:${project.version}</artifact>
+							<deleteOtherVersionsPolicy>older</deleteOtherVersionsPolicy>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
