--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,23 @@ Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 			<plugin>
 				<artifactId>maven-release-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<configuration>
+					<!-- see https://issues.apache.org/jira/browse/MNG-5346 -->
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generate-descriptor</id>
+						<goals>
+							<goal>descriptor</goal>
+							<goal>helpmojo</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -233,6 +250,7 @@ Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 												<versionRange>[3.2,)</versionRange>
 												<goals>
 													<goal>descriptor</goal>
+													<goal>helpmojo</goal>
 												</goals>
 											</pluginExecutionFilter>
 											<action>
