CI: switch from Travis CI to GitHub Actions

--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,8 @@
 		<url>https://github.com/imagej/imagej-maven-plugin/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/imagej/imagej-maven-plugin</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/imagej/imagej-maven-plugin/actions</url>
 	</ciManagement>
 
 	<properties>
