--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,9 @@ Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 		<license.projectName>ImageJ software for multidimensional image processing and analysis.</license.projectName>
 		<maven.version>3.0</maven.version>
 		<scijava-common.version>2.66.0</scijava-common.version>
+
+		<!-- NB: Deploy releases to the SciJava Maven repository. -->
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<dependencies>
